vagrant-k8s/yml/dev/pod-configmap.yml

apiVersion: v1
kind: Pod
metadata:
  name: pod-configmap
  namespace: dev
spec:
  containers:
  - name: app-container
    image: nginx:latest
