vagrant-k8s/yml/dev/pod-nginx.yml

apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: backend
  name: nginx
  namespace: dev

spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
      name: nginx-port
