vagrant-k8s/yml/dev/svc-nginx.yml

# kubectl port-forward svc/nginx-service 81:80
# 宿主机访问 http://localhost:81
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev
spec:
  ports:
  - port: 80 # service 端口
    # protocol: TCP
    targetPort: 80 # pod 容器端口
    # nodePort: 30080 # NodePort 端口
  selector:
    app: nginx
  # 同一个客户端访问，会被路由到同一个后端 Pod
  sessionAffinity: ClientIP
  # ClusterIP 只有集群内部可访问; 
  # NodePort 和 LoadBalancer 可从集群外部访问
  type: NodePort #
